Fixed list spacing

--- a/scss/07-widgets/02-widgets.scss
+++ b/scss/07-widgets/02-widgets.scss
@@ -13,12 +13,13 @@
     }
   }
 
-  ul {
+  ul,
+  ol {
     list-style: none;
-    margin: 0;
-    padding: 0;
-
-    ul {
+    margin-inline-start: 0;
+    
+    ul,
+    ol {
       margin-inline-start: 1em;
     }
   }
